force-app/main/default/objects/ssot__ForecastItemManagerVersionAmount__dlm/fields/ssot__AdjustedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdjustedQuantity__c</fullName>
    <label>Adjusted Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdjustedQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>