force-app/main/default/objects/ssot__ForecastItemManagerVersionAmount__dlm/fields/ssot__AdjustmentNoteText__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdjustmentNoteText__c</fullName>
    <label>Adjustment Note</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdjustmentNoteText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>