force-app/main/default/objects/ssot__ForecastItemManagerVersionAmount__dlm/fields/ssot__BusinessPeriodId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BusinessPeriodId__c</fullName>
    <label>Business Period</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BusinessPeriodId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>