force-app/main/default/objects/ssot__ForecastItemManagerVersionAmount__dlm/fields/ssot__ForecastType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ForecastType__c</fullName>
    <label>Forecast Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ForecastType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>